<resources>
    <string name="app_name" translatable="false">A Movie</string>
    <string name="watch_now">Watch now</string>
    <string name="aa" translatable="false">aa</string>
    <string name="toast_full_screen">Chế độ xem sẽ tự động chuyển đổi ở chế độ tự động xoay màn hình</string>
    <string name="over_view">Over view</string>
    <string name="episodes">Episodes</string>
    <string name="lorem" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="episode">%s/%s</string>
    <string name="player_title">%s (Tập %s)</string>
    <string name="original_name">Original name: %s</string>
    <string name="duration">Duration: %s</string>
    <string name="country">Country: %s</string>
    <string name="category">Category: %s</string>
    <string name="num_of_episode">Number of episodes: %s</string>
    <string name="created_year">Created year: %s</string>
    <string name="follow">Follow</string>
    <string name="share">Share</string>
    <string name="list_ep">Episodes</string>
    <string name="suggest">Suggestion</string>
    <string name="episode_num">Episode %s</string>
    <string name="select_server">Select server</string>
    <string name="newly_film">New release</string>
    <string name="bullet">·</string>
    <string name="hot_series">Hot series</string>
    <string name="viet_nam_must_watch">Vietnam films</string>
    <string name="anime">Anime</string>
    <string name="hot_in_cinema">Hot in Cinema</string>
    <string name="home">Home</string>
    <string name="cinema">Cinema</string>
    <string name="series">Series</string>
    <string name="tv_show">Tv Show</string>
    <string name="user">User</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search">Search</string>
    <string name="search_for_name">Search for name</string>
    <string name="close">Close</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="loading">Loading…</string>
    <string name="no_favourites">No favorite film</string>
    <string name="no_result">No result</string>
    <string name="facebook_application_id" translatable="false">com.daemonz.animange</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbcom.daemonz.animange</string>
    <string name="login">Login</string>
    <string name="account_info">Account information</string>
    <string name="web_client_id" translatable="false">4792051722-mhjnpgl43ief55vhgn1q37ag5v7k4dbi.apps.googleusercontent.com</string>
    <string name="asset_statements" translatable="false">
        [{
            \"include\": \"https://animan.rf.gd/.well-known/assetlinks.json\"
        }]
    </string>
    <string name="tos_and_pp">
        <![CDATA[By continuing you are indicating that you accept our <a href="https://doc-hosting.flycricket.io/phim-free-terms-of-use/31f92dc4-0e1b-47e0-bece-f1032e12ee8b/terms">Terms of Service</a> and <a href="https://doc-hosting.flycricket.io/phim-free-privacy-policy/ce582f03-8635-4bb1-b05c-1967e4989070/privacy">Privacy Policy</a>]]>
    </string>
    <string name="continue_with_your_email">Continue with your email</string>
    <string name="continue_with_your_phone_number">Continue with phone number</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="favourite">Favorites</string>
    <string name="feedback">Feed back</string>
    <string name="support">Contact for support</string>
    <string name="logout">Log out</string>
    <string name="add_user">Add</string>
    <string name="edit">Edit</string>
    <string name="back">back</string>
    <string name="checked">checked</string>
    <string name="save">Save change</string>
    <string name="phone_num">Phone number</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="please_login_first">Hãy đăng nhập để lưu phim yêu thích</string>
    <string name="favourites_filmes">Favorites film</string>
    <string name="user_profile">User Profile</string>
    <string name="update_complete">Update complete</string>
    <string name="who_watching">Who watching?</string>
    <string name="exit">Exit</string>
    <string name="user_limit_reached">Reached max users</string>
    <string name="password">Password</string>
    <string name="complete">Completed</string>
    <string name="new_user">New User</string>
    <string name="edit_user">Edit user</string>
    <string name="user_not_logged_in">Bạn chưa đăng nhập</string>
    <string name="default_notification_channel_id">animan</string>
    <string name="msg_token_fmt">token %s</string>
    <string name="update_sheet_title">New update!</string>
    <string name="update_sheet_decs">The new update has been released on the Google Play platform. Do you want to update it right away?</string>
    <string name="update_now">Update now</string>
    <string name="next_time">Remind me later</string>
    <string name="update_sheet_decs_required">There is now a new update on the Google Play platform. Please update to continue using it.</string>
    <string name="comment">Comments</string>
    <string name="like">Like</string>
    <string name="comment_hint">Leave you comment here ( ˘▽˘)っ♨</string>
    <string name="comment_time_minute">%d mins</string>
    <string name="comment_time_hour">%d hours</string>
    <string name="comment_time_day">%d days ago\n</string>
    <string name="comment_time_month">%d months ago</string>
    <string name="comment_time_year">%d years ago</string>
    <string name="comment_newest_reply">%s replied</string>
    <string name="reply">Reply</string>
    <string name="login_to_comment">Hãy đăng nhập để bình luận (✌ﾟ∀ﾟ)☞</string>
    <string name="now">Now</string>
    <string name="invalid_name">Username must be greater than 3 and maximum 20 characters</string>
    <string name="delete_user_title">Delete user</string>
    <string name="delete_user_decs">Are you sure you want to delete this user?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="can_not_delete_main_user">Cannot delete default user!</string>
    <string name="ok">Ok</string>
    <string name="rate">Rate</string>
    <string name="theme">Theme</string>
    <string name="how_your_feel">How do you feel about this movie?</string>
    <string name="film_rating">Review</string>
    <string name="rating">Review</string>
    <string name="no_comment">No comments yet.</string>
    <string name="no_rating">No reviews yet</string>
    <string name="rate_avg" translatable="false">(%s)</string>
    <string name="loading_data">Loading data…</string>
    <string name="check_login">Checking login status…</string>
    <string name="user_management">User Management</string>
    <string name="need_support">Need more help?</string>
    <string name="what_yr_name">What is your name?</string>
    <string name="email_addr">Email</string>
    <string name="your_comment">Your opinion</string>
    <string name="text_send">Send</string>
    <string name="feedback_success">Request has been sent, we will respond as soon as possible</string>
    <string name="feedback_fail">Unable to send feedback, please try again later</string>
    <string name="acc_name">Account Name</string>
    <string name="error_when_load_image">An error occurred while trying to load the image....</string>
    <string name="expand_text">&#8623;See more</string>
    <string name="three_dot" translatable="false">&#8230;</string>
    <string name="internet_title">Lost internet connection</string>
    <string name="internet_decs">Internet access not available. Please check your connection to continue using.</string>
    <string name="quit">Quit</string>
    <string name="go_setting">Setting</string>
    <string name="send_review">Send review</string>
    <string name="recent_search">Recent searches</string>
    <string name="invalid_passord">Password consists of 6 numeric characters, leave blank if not using password</string>
    <string name="action">Action</string>
    <string name="romance">Romance</string>
    <string name="comedy">Comedy</string>
    <string name="co_trang">Historical drama</string>
    <string name="tam_ly">Mentality</string>
    <string name="hinh_su">Criminal</string>
    <string name="chien_tranh">War</string>
    <string name="the_thao">Sport</string>
    <string name="vo_thuat">Martial Arts</string>
    <string name="vien_tuong">Fantasy</string>
    <string name="phieu_luu">Adventure</string>
    <string name="khoa_hoc">Science</string>
    <string name="kinh_di">Horror</string>
    <string name="am_nhac">Music</string>
    <string name="than_thoai">Mythology</string>
    <string name="tai_lieu">Documentary</string>
    <string name="gia_dinh">Family</string>
    <string name="chinh_kich">Drama</string>
    <string name="bi_an">Mystery</string>
    <string name="hoc_duong">School</string>
    <string name="kinh_dien">Classic</string>
    <string name="phim_18">Adult</string>
    <string name="phim_moi">New Film</string>
    <string name="phim_bo">Series</string>
    <string name="phim_le">Movie</string>
    <string name="hoat_hinh">Anime/cartoon</string>
    <string name="phim_thuyet_minh">Narrated film</string>
    <string name="phim_long_tieng">Dubbed movies</string>
    <string name="phim_bo_dang_chieu">Phim đang chiếu</string>
    <string name="phim_bo_hoan_thanh">Completed</string>
    <string name="phim_sap_chieu">Coming soon</string>
    <string name="phim_subteam">Sub team</string>
    <string name="phim_vietsub">Vietsub</string>
    <string name="viet_nam">Việt Nam</string>
    <string name="au_my">EU-US</string>
    <string name="trung_quoc">China</string>
    <string name="nhat_ban">Japan</string>
    <string name="anh">UK</string>
    <string name="filter">Filter</string>
    <string name="category_title">Category</string>
    <string name="phim_all">All</string>
    <string name="country_title">Country</string>
    <string name="created_year_title">Created Year</string>
    <string name="pin">PIN</string>
    <string name="please_input_pin">Enter PIN to continue</string>
    <string name="wrong_password">Wrong password</string>
    <string name="input_pin">Enter PIN</string>
    <string name="do_you_want_to_log_out">Log out of your account?</string>
    <string name="log_out">Log out</string>
    <string name="no">No</string>
    <string name="switch_user">Switch User</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="type_list">Film List</string>
    <string name="apply_selection">Apply Selection</string>
    <string name="rotate_error">Some problem occured when rotating screen. Please try rotate again</string>
    <string name="rotate">Rotate</string>
    <string name="notification">Notifications</string>
    <string name="you_have_new_notification">You have new notification</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="empty_warning">Nếu điện thoại của bạn không thể tải được dữ liệu, hãy sử dụng app 1.1.1.1 hoặc vpn bất kì để dễ dang truy cập</string>
    <string name="title_warning_empty">Nhắc bạn</string>
    <string name="download_vpn">Mở 1.1.1.1</string>
    <string name="new_manga">Truyện mới</string>
</resources>